html value change

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 
 <body>
   <div>
-    Hello world
+    <h3>Hello world</h3>
+    <h2>Hi zubaer</h2>
+    <span>This is the url of the website</span>
   </div>
 </body>
 
