--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <h3>Hello world</h3>
     <h2>Hi zubaer</h2>
     <span>This is the url of the website</span>
+    <img src="images/picture.jpg" alt="">
   </div>
 </body>
 
