--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <h2>Hi zubaer</h2>
     <span>This is the url of the website and zubayer-salehin</span>
     <img src="images/picture.jpg" alt="">
+    <img src="Service.png" alt="">
   </div>
 </body>
 
