--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <h2 class="dot">Experiences</h2>
     <div id="full_stack" class="half_width">
       <h2>Full Stack Web Developer</h2>
-      <h3 class="colered">2021-Present | Pro Level Developer</h3>
+      <h3 class="orange-color">2021-Present | Pro Level Developer</h3>
       <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I
         didn't
         stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the
@@ -61,7 +61,7 @@
 
     <div id="baby" class="half_width">
       <h2>Baby Web Developer</h2>
-      <h3 class="colered">2020-2021 | Programming Hero Learner</h3>
+      <h3 class="orange-color">2020-2021 | Programming Hero Learner</h3>
       <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed it to
         them.
         They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
